Changed delete response to student id.
